完成任务二的诊断部分
